# shoper

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  renovate.json  setup.py  shell_operator.py  wercker.yml
.claude/: settings.json
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  python-package-release-on-pypi-and-github.yml  python-publish.yml  test.yml
.serena/: project.yml
shoper/: __init__.py  shelloperator.py
shopy/: shell_operator.py  shelloperator.py
test/: __init__.py  test_shelloperator.py
tests/: __init__.py  test_shelloperator.py
