[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shoper"
description = "Simple shell operator module"
authors = [{name = "Daichi Narushima", email = "dnarsil+github@gmail.com"}]
maintainers = [{name = "Daichi Narushima", email = "dnarsil+github@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.7"
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Shells"
]

[project.urls]
Repository = "https://github.com/dceoy/shoper.git"

[tool.setuptools.dynamic]
version = {attr = "shoper.__version__"}

[tool.setuptools.packages.find]
where = ["./"]
include = ["shoper"]
